--- a/choosePicture.html
+++ b/choosePicture.html
@@ -28,8 +28,23 @@
             <h1>Sky Fetchers</h1>
         </section>
 
-        <section class="lastPictures"></section>
+        <section class="choosePicture">
+            <p>
+                Retrouvez ici une image aléatoire de la base de données de
+                l'APOD (Astronomy Picture Of the Day, microservice de la NASA).
+                Vous pouvez également selectionner une date pour afficher
+                l'image correspondante, et remonter jusqu'au jour de sa création
+                le 16 juin 1995.
+            </p>
+            <div class="dateInput">
+                <label for="start">Aller à ce jour:</label> <input type="date"
+                id="start" name="date-start" value="1995-06-16" min="2020-01-01"
+                max""/>
+            </div>
 
-        <script src="javascript/lastDays.js"></script>
+            <div class="pictureDiv"></div>
+        </section>
+
+        <script src="javascript/choosePicture.js"></script>
     </body>
 </html>
