troisieme commit rectif input date finalisation page 2

--- a/choosePicture.html
+++ b/choosePicture.html
@@ -37,9 +37,15 @@
                 le 16 juin 1995.
             </p>
             <div class="dateInput">
-                <label for="start">Aller à ce jour:</label> <input type="date"
-                id="start" name="date-start" value="1995-06-16" min="2020-01-01"
-                max""/>
+                <label for="start">Aller à ce jour:</label>
+                <input
+                    type="date"
+                    id="start"
+                    name="date-start"
+                    value="1995-06-16"
+                    min="1995-06-16"
+                    max=""
+                />
             </div>
 
             <div class="pictureDiv"></div>
