8eme commit rectification structure js

--- a/launchs.html
+++ b/launchs.html
@@ -35,6 +35,6 @@
             </aside>
         </section>
 
-        <script src="javascript/launchsTest.js"></script>
+        <script src="javascript/launchs.js"></script>
     </body>
 </html>
